update email add tiktok update who

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -100,7 +100,7 @@
     "visionText": "أن نكون الكيان التجاري الأول في ربط الأسواق الصينية بالسعودية ودول الخليج، عبر تسهيل الاستيراد وتوفير المصانع والشركات الموثوقة، وبناء جسور حقيقية تعزز التجارة بين الجانبين. كما نسعى إلى استقطاب الشركات والمستثمرين للدخول إلى السوق السعودي بما يتوافق مع مستهدفات رؤية 2030، من خلال شراكات طويلة الأمد قائمة على الثقة والاحترافية.",
     "messageTitle": "رسالتنا",
     "messageText": "تقديم حلول استيراد وتوريد متكاملة وموثوقة تشمل الفحص، الجودة، الإشراف المباشر، والمتابعة الدقيقة من داخل الصين، لضمان حصول عملائنا على أفضل المنتجات والخدمات بتجربة آمنة، سريعة، ومستدامة.",
-    "experienceCount": "16+",
+    "experienceCount": "نمتلك خبرة واسعه  تراكمت من خلال عشرات المشاريع الناجحة والتعاون الوثيق مع شركاء من مختلف القطاعات، مما مكّننا من تقديم حلول متميزة وفعالة.",
     "experienceLabel": "سنوات الخبرة",
     "headquartersLabel": "المقر الرئيسي",
     "headquartersValue": "المملكة العربية السعودية",
