--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -100,7 +100,7 @@
     "visionText": "To become the leading commercial entity connecting Chinese markets with Saudi Arabia and the Gulf region by facilitating import operations, providing trusted factories and companies, and building real bridges that strengthen trade between both sides. We also aim to attract companies and investors to enter the Saudi market in alignment with Vision 2030 through long-term partnerships built on trust and professionalism.",
     "messageTitle": "Our Message",
     "messageText": "To provide integrated and reliable import and sourcing solutions, including inspection, quality assurance, direct supervision, and precise follow-up from within China to ensure our clients receive the best products and services with a safe, fast, and sustainable experience.",
-    "experienceCount": "16+",
+    "experienceCount": "We have extensive expertise built through dozens of successful projects and close collaboration with partners across various sectors, enabling us to deliver exceptional and effective solutions.",
     "experienceLabel": "Years of Experience",
     "headquartersLabel": "Headquarters",
     "headquartersValue": "Saudi Arabia",
