update the market section

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -260,7 +260,7 @@
   },
   "marketsSection": {
     "heading": "الأسواق والقطاعات",
-    "intro": "تمتد خبرة روك بريدج للاستيراد والتصدير لأكثر من 16 عامًا عبر أسواق الصين والخليج، حيث نجحنا في بناء شبكة متكاملة من المصانع والموردين والشركاء اللوجستيين.",
+    "intro": "نمتلك خبرة واسعه  تراكمت من خلال عشرات المشاريع الناجحة والتعاون الوثيق مع شركاء من مختلف القطاعات، مما مكّننا من تقديم حلول متميزة وفعالةفي أسواق الصين وأسواق مجلس التعاون الخليجي. انسانا شبكة متكاملة من المصانع والموردين وشركاء اللوجستيات مما أتاح الاستيراد والتوريد بشكل فعال وآمن لربط الشرق بالغرب.",
     "marketsHeading": "الأسواق",
     "bridgeTitle": "روك بريدج",
     "bridgeSubtitle": "ربط الشرق بالغرب",
