--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -260,7 +260,7 @@
   },
   "marketsSection": {
     "heading": "Markets & Sectors",
-    "intro": "ROCK BRIDGE has over 16 years of experience across China and GCC markets. We built an integrated network of factories, suppliers and logistics partners enabling effective, secure import & supply linking East and West.",
+    "intro": "We possess extensive experience accumulated through dozens of successful projects and close collaboration with partners from various sectors, enabling us to deliver distinguished and effective solutions in the Chinese market and the GCC markets. We have built an integrated network of factories, suppliers, and logistics partners, allowing for efficient and secure importing and supplying to connect the East with the West.",
     "marketsHeading": "Markets",
     "bridgeTitle": "ROCK BRIDGE",
     "bridgeSubtitle": "Connecting East & West",
